--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<html>
+<head>
+</head>
 <body>
-<h1> HCI </h1>
-<br></br>
-<p>
-  Christian Rodas
-  cmrnmc@umsystem.edu
-</p>
+    <h1>CS456 Human Computer Interface</h1>
+
+    <p>
+    Name: Christian Rodas
+    Email: cmrnmc@umsystem.edu
+    </p>
+
 </body>
+</html>
