--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
     <p>
     Name: Christian Rodas
     </p>
-    <br></br>
     <p>
     Email: cmrnmc@umsystem.edu
+    </p>
+
+    <br>
+    <h3>Homework 1</h3>
+    <h5>Bad Example 1:</h5>
+    <p>
+        This is a bad example
+    </p>
+    <br>
+    <h5>Bad Example: 2</h5>
+    <p>
+        This is my second example
+    </p>
+    <br>
+    <h5>Good Example 1:</h5>
+    <p>
+        This is a good example
+    </p>
+    <br>
+    <h5>Good Example 2:</h5>
+    <p>
+        This is another good example
     </p>
 
 </body>
