--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-    <h1>CS456 Human Computer Interface</h1>
+    <title>CS456 Human Computer Interface</title>
 
     <p>
     Name: Christian Rodas
@@ -13,24 +13,94 @@
 
     <br>
     <h3>Homework 1</h3>
-    <h5>Bad Example 1:</h5>
+    <h5>Bad Example 1: Car Infotainment System</h5>
     <p>
-        This is a bad example
+        The purpose of this interface is control certain functions of a car, 
+        that don’t relate with the actual driving the vehicle. 
+        It is an overall bad design as it can be difficult for someone to learn what everything does, and where to find it. 
+        Especially if you are driving this vehicle for the first time and are trying to change the song or change the temperature while driving down the highway. 
+    </p>
+    <p>
+        Image:
+    </p>
+    <p>
+        I think it was designed this way to make it both appeasing to the eye yet, easy to reach all the buttons. 
+        However, it resulted in an overly cumbersome interface that is hard to figure out to use. 
+        A better design would have been move the display in between the audio buttons and the heating/cooling buttons. 
+        Another improvement would be by moving the lock and unlock to the driver side.  
     </p>
     <br>
-    <h5>Bad Example: 2</h5>
+    <h5>Bad Example 2: Rover P6 Parts Website</h5>
     <p>
-        This is my second example
+        http://www.roverp6parts.com/index.html
+        The purpose of this interface is to order parts for the Rover P6 however, 
+        there are a lot aspects besides just ordering parts. 
+        Overall it’s a bad design as the home page has practically no uniformity in its layout. 
+        The text on the banners don’t fit so you have to wait a bit to read it. 
+        The navigation is on the left hand side and so you have to keep scrolling down to read all of it. 
+        It’s also hard to read as the font size changes and having a picture of a car underneath the words doesn’t help.
+    </p>
+    <p>
+        image
+    </p>
+    <p>
+        After scrolling down some more, there is an image going everything they sell 
+        however whenever you go to click on the part you are interested in, it doesn’t do anything, 
+        which is confusing as it’s common practice that underlined text usually means that it is a hyperlink. 
+        Furthermore, it is rather random as to which words get the underline and which don’t.
+    </p>
+    <p>
+        image
+    </p>
+    <p>
+        I think it was designed this way to stand out and be flashy but it comes with consequence of an 
+        overall confusing, difficult to navigate interface. 
+        A couple huge improvements would be to make the car parts have a 
+        hyperlink taking the user that specific car part and by moving the 
+        navigation bar to the top and by moving some the less important information elsewhere.
     </p>
     <br>
-    <h5>Good Example 1:</h5>
+    <h5>Good Example 1: Vornado Heater/Fan</h5>
     <p>
-        This is a good example
+        -	The purpose of the overall interface is to control the heater’s heating functionality. 
+        I find the interface to be quite well. 
+        For one, the heater can be powered on by pressing the 
+        universally recognized power icon (which is always lit) on either the unit itself or via the remote control.  
+    </p>
+    <p>
+        images
+    </p>
+    <p>
+        Once powered on, the display lights up and the heater starts on the last set setting. 
+        The display stays on until the heater is turned off, and is clear enough and bright to read from a distance. 
+        The display also displays text of the current room temperature is and what the set temperature is. 
+        he accompanying icons are recognizable and easy to figure out they do, and the display updates 
+        immediately after input. Perhaps the biggest downside of the interface is the lack of physical buttons, 
+        so someone with no vision, will have a difficult time figuring out how to change the settings. 
+        I’m not sure why it was designed that way. 
+        I know that with physical buttons, they tend to become sticky over time or just no longer work, 
+        whereas capacitive buttons last a long and don’t wear out the way physical ones do. 
+        However, I’d imagine that it is rather easy to add some braille near the buttons so that 
+        blind people can still understand what the buttons do.
     </p>
     <br>
-    <h5>Good Example 2:</h5>
+    <h5>Good Example 2: Smartphone Smart Launcher 5</h5>
     <p>
-        This is another good example
+        video
+    </p>
+    <p>
+        Smart Launcher 5 is an overall good interface for smartphones as it allows users to access 
+        all their apps, widgets, time, reminders, and current local weather, in a fast, simple to use way. 
+        It’s particular good in the way that organizes everything. 
+        For example, on the main page, you can see the current time, current weather, reminders for today, 
+        most used apps with the amount of notifications, and a smart search bar at the bottom. 
+        Swiping to left takes you to your widget pages, swiping to the right opens the news, 
+        swiping up opens your app drawer, and swiping down opens the smart search along with the keyboard. 
+        I think it was designed this way to declutter the hundreds of apps on smartphones and 
+        to help users find certain apps or information quickly. 
+    </p>
+    <p>
+        image
     </p>
 
 </body>
