--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
     </p>
     <br>
     <h5>Good Example 2: Smartphone Smart Launcher 5</h5>
-    <p>
-        video
-    </p>
+    <iframe width="420" height="315"
+    src="https://www.youtube.com/watch?v=kKT7e8Bek2E">
+    </iframe>
     <p>
         Smart Launcher 5 is an overall good interface for smartphones as it allows users to access 
         all their apps, widgets, time, reminders, and current local weather, in a fast, simple to use way. 
