--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <br>
     <h5>Good Example 2: Smartphone Smart Launcher 5</h5>
     <iframe width="420" height="315"
-    src="https://www.youtube.com/watch?v=kKT7e8Bek2E">
+    src="http://www.youtube.com/watch?v=kKT7e8Bek2E">
     </iframe>
     <p>
         Smart Launcher 5 is an overall good interface for smartphones as it allows users to access 
