--- a/index.html
+++ b/index.html
@@ -85,9 +85,7 @@
     </p>
     <br>
     <h5>Good Example 2: Smartphone Smart Launcher 5</h5>
-    <iframe width="420" height="315"
-    src="http://www.youtube.com/watch?v=kKT7e8Bek2E">
-    </iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/kKT7e8Bek2E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>
         Smart Launcher 5 is an overall good interface for smartphones as it allows users to access 
         all their apps, widgets, time, reminders, and current local weather, in a fast, simple to use way. 
