--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 </head>
 <body>
     <title>CS456 Human Computer Interface</title>
+    <h1>CS456 Human Computer Interface</h1>
 
     <p>
     Name: Christian Rodas
@@ -12,17 +13,17 @@
     </p>
 
     <br>
-    <h3>Homework 1</h3>
-    <h5>Bad Example 1: Car Infotainment System</h5>
+    <h2>Homework 1</h2>
+    <h3>Bad Example 1: Car Infotainment System</h3>
     <p>
         The purpose of this interface is control certain functions of a car, 
         that don’t relate with the actual driving the vehicle. 
         It is an overall bad design as it can be difficult for someone to learn what everything does, and where to find it. 
         Especially if you are driving this vehicle for the first time and are trying to change the song or change the temperature while driving down the highway. 
     </p>
-    <p>
-        Image:
-    </p>
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/bad%20car%20infotainment%20ssytem.png" alt="Infotainment system example">
+    <p>        
+        Image Source: <a href="https://images.app.goo.gl/N5Pzw4NUGnoUyy8K9">https://images.app.goo.gl/N5Pzw4NUGnoUyy8K9</a> 
     <p>
         I think it was designed this way to make it both appeasing to the eye yet, easy to reach all the buttons. 
         However, it resulted in an overly cumbersome interface that is hard to figure out to use. 
@@ -30,9 +31,8 @@
         Another improvement would be by moving the lock and unlock to the driver side.  
     </p>
     <br>
-    <h5>Bad Example 2: Rover P6 Parts Website</h5>
+    <h3>Bad Example 2: Rover P6 Parts Website</h3>
     <p>
-        http://www.roverp6parts.com/index.html
         The purpose of this interface is to order parts for the Rover P6 however, 
         there are a lot aspects besides just ordering parts. 
         Overall it’s a bad design as the home page has practically no uniformity in its layout. 
@@ -40,18 +40,14 @@
         The navigation is on the left hand side and so you have to keep scrolling down to read all of it. 
         It’s also hard to read as the font size changes and having a picture of a car underneath the words doesn’t help.
     </p>
-    <p>
-        image
-    </p>
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/roverp61.png" alt="roverp6parts1">
     <p>
         After scrolling down some more, there is an image going everything they sell 
         however whenever you go to click on the part you are interested in, it doesn’t do anything, 
         which is confusing as it’s common practice that underlined text usually means that it is a hyperlink. 
         Furthermore, it is rather random as to which words get the underline and which don’t.
     </p>
-    <p>
-        image
-    </p>
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/roverp62.png" alt="roverp6parts2">
     <p>
         I think it was designed this way to stand out and be flashy but it comes with consequence of an 
         overall confusing, difficult to navigate interface. 
@@ -59,17 +55,21 @@
         hyperlink taking the user that specific car part and by moving the 
         navigation bar to the top and by moving some the less important information elsewhere.
     </p>
-    <br>
-    <h5>Good Example 1: Vornado Heater/Fan</h5>
     <p>
-        -	The purpose of the overall interface is to control the heater’s heating functionality. 
+        Image Source: <a href="http://www.roverp6parts.com/index.html">http://www.roverp6parts.com/index.html</a> 
+    </p>
+    <br>
+
+    <h3>Good Example 1: Vornado Heater/Fan</h3>
+    <p>
+        The purpose of the overall interface is to control the heater’s heating functionality. 
         I find the interface to be quite well. 
         For one, the heater can be powered on by pressing the 
         universally recognized power icon (which is always lit) on either the unit itself or via the remote control.  
     </p>
-    <p>
-        images
-    </p>
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/vornado1.png" alt="vornadoex1">
+
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/vornado2.png" alt="vornadoex2">
     <p>
         Once powered on, the display lights up and the heater starts on the last set setting. 
         The display stays on until the heater is turned off, and is clear enough and bright to read from a distance. 
@@ -84,8 +84,8 @@
         blind people can still understand what the buttons do.
     </p>
     <br>
-    <h5>Good Example 2: Smartphone Smart Launcher 5</h5>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/kKT7e8Bek2E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h3>Good Example 2: Smartphone Smart Launcher 5</h3>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/kKT7e8Bek2E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>
         Smart Launcher 5 is an overall good interface for smartphones as it allows users to access 
         all their apps, widgets, time, reminders, and current local weather, in a fast, simple to use way. 
@@ -97,9 +97,7 @@
         I think it was designed this way to declutter the hundreds of apps on smartphones and 
         to help users find certain apps or information quickly. 
     </p>
-    <p>
-        image
-    </p>
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/smartlauncher5.png" alt="vornadoex2">
 
 </body>
 </html>
