--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
         that don’t relate with the actual driving the vehicle. 
         It is an overall bad design as it can be difficult for someone to learn what everything does, and where to find it. 
         Especially if you are driving this vehicle for the first time and are trying to change the song or change the temperature while driving down the highway. 
+        For example there are two power icons and it's not clear what each one relates to. To adjust the climate control you have look down, but the display at the top, which makes the user look up and down every time they adjust the climate.
+        To lock and unlock the car, it's in the middle, whereas in most other cars (including cars from the same manufacturer) are on the left side.
     </p>
-    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/bad%20car%20infotainment%20ssytem.png" alt="Infotainment system example">
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/bad%20infotainment%20system.jpg" alt="Infotainment system example">
     <p>        
-        Image Source: <a href="https://images.app.goo.gl/N5Pzw4NUGnoUyy8K9">https://images.app.goo.gl/N5Pzw4NUGnoUyy8K9</a> 
+        Image Source: <a href="https://cars.usnews.com/static/images/Auto/izmo/321046/2011_chevrolet_cruze_tempcontrol.jpg">https://cars.usnews.com/static/images/Auto/izmo/321046/2011_chevrolet_cruze_tempcontrol.jpg</a> 
     <p>
-        I think it was designed this way to make it both appeasing to the eye yet, easy to reach all the buttons. 
+        I think it was designed this way to make it both attractive and easy to reach all the buttons. 
         However, it resulted in an overly cumbersome interface that is hard to figure out to use. 
         A better design would have been move the display in between the audio buttons and the heating/cooling buttons. 
         Another improvement would be by moving the lock and unlock to the driver side.  
@@ -33,28 +35,27 @@
     <br>
     <h3>Bad Example 2: Rover P6 Parts Website</h3>
     <p>
-        The purpose of this interface is to order parts for the Rover P6 however, 
-        there are a lot aspects besides just ordering parts. 
-        Overall it’s a bad design as the home page has practically no uniformity in its layout. 
-        The text on the banners don’t fit so you have to wait a bit to read it. 
-        The navigation is on the left hand side and so you have to keep scrolling down to read all of it. 
+        The purpose of this interface is to order parts for the Rover P6. 
+        Overall it’s a bad design as there are many aspects that make it confusing and slow. 
+        For example, the text on the banners don’t fit, so you have to wait for the full text to finish scrolling before you have read all of it. 
+        The navigation bar is on the left hand side and it doesn't show all the options, so you have to keep scrolling down to see what else is available.
         It’s also hard to read as the font size changes and having a picture of a car underneath the words doesn’t help.
     </p>
     <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/roverp61.png" alt="roverp6parts1">
     <br>
     <p>
-        After scrolling down some more, there is an image going everything they sell 
-        however whenever you go to click on the part you are interested in, it doesn’t do anything, 
-        which is confusing as it’s common practice that underlined text usually means that it is a hyperlink. 
-        Furthermore, it is rather random as to which words get the underline and which don’t.
+        It's confusing since after scrolling down some more, there is an image saying everything they sell.
+        However, whenever you go to click on the part you are interested in, it doesn’t do anything.
+        This is even more confusing as it’s common practice that underlined text usually means that it is a hyperlink, but here it doesn't do anything.
+        Furthermore, I can figure out as to why some words get the underline and others don't.
     </p>
     <br>
     <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/roverp62.png" alt="roverp6parts2">
     <p>
         I think it was designed this way to stand out and be flashy but it comes with consequence of an 
-        overall confusing, difficult to navigate interface. 
-        A couple huge improvements would be to make the car parts have a 
-        hyperlink taking the user that specific car part and by moving the 
+        overall confusing, slow to navigate interface. 
+        A couple huge improvements would be to make the car parts have an actual working 
+        hyperlink, taking the user that specific car part. Another improvement would be by moving the 
         navigation bar to the top and by moving some the less important information elsewhere.
     </p>
     <p>
@@ -65,7 +66,7 @@
     <h3>Good Example 1: Vornado Heater/Fan</h3>
     <p>
         The purpose of the overall interface is to control the heater’s heating functionality. 
-        I find the interface to be quite well. 
+        I find the overall interface to be good. 
         For one, the heater can be powered on by pressing the 
         universally recognized power icon (which is always lit) on either the unit itself or via the remote control.  
     </p>
@@ -73,15 +74,15 @@
 
     <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/vornado2.png" alt="vornadoex2">
     <p>
-        Once powered on, the display lights up and the heater starts on the last set setting. 
+        Once powered on, the display lights up, and the heater starts on the last set setting. 
         The display stays on until the heater is turned off, and is clear enough and bright to read from a distance. 
         The display also displays text of the current room temperature is and what the set temperature is. 
-        he accompanying icons are recognizable and easy to figure out they do, and the display updates 
+        The accompanying icons are recognizable and easy to figure out they do, and the display updates 
         immediately after input. Perhaps the biggest downside of the interface is the lack of physical buttons, 
-        so someone with no vision, will have a difficult time figuring out how to change the settings. 
+        so a blind person, will have a difficult time figuring out how to change the settings. 
         I’m not sure why it was designed that way. 
         I know that with physical buttons, they tend to become sticky over time or just no longer work, 
-        whereas capacitive buttons last a long and don’t wear out the way physical ones do. 
+        whereas capacitive buttons last longer and don’t wear out the way physical ones do. 
         However, I’d imagine that it is rather easy to add some braille near the buttons so that 
         blind people can still understand what the buttons do.
     </p>
@@ -89,17 +90,17 @@
     <h3>Good Example 2: Smartphone Smart Launcher 5</h3>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/kKT7e8Bek2E" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>
-        Smart Launcher 5 is an overall good interface for smartphones as it allows users to access 
-        all their apps, widgets, time, reminders, and current local weather, in a fast, simple to use way. 
+        Smart Launcher 5 is an overall good interface, with the purpose of being used a launcher interface for smartphones. It allows users to access 
+        all their apps, widgets, the current time, thier reminders, and the current local weather. All the while being fast and simple. 
         It’s particular good in the way that organizes everything. 
         For example, on the main page, you can see the current time, current weather, reminders for today, 
-        most used apps with the amount of notifications, and a smart search bar at the bottom. 
+        your most used apps and with the amount of notifications. As well as a smart search bar at the bottom. 
         Swiping to left takes you to your widget pages, swiping to the right opens the news, 
-        swiping up opens your app drawer, and swiping down opens the smart search along with the keyboard. 
+        swiping up opens your app drawer, and swiping down opens the smart search. 
         I think it was designed this way to declutter the hundreds of apps on smartphones and 
-        to help users find certain apps or information quickly. 
+        to help users find certain apps or information quickly, while having a simple interface.
     </p>
-    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/smartlauncher5.png" alt="vornadoex2">
+    <img src="https://raw.githubusercontent.com/ChristianR21/CS456-HCI/main/smartlauncher5.png" alt="smartlauncher5">
 
 </body>
 </html>
